Melon Application Change Log
========================

Version 0.0.1 under development
--------------------------------
New: изменено имя команды отправки почты, теперь для вызова достаточно: ./yiic email
New: изменены названия namespace для модулей и приложений на соответствующие названиям каталогов
New: добавлена команда установки прав 777 на каталоги runtime и assets