@@ -3,6 +3,8 @@ Melon Application Change Log
 
 Version 0.0.1 under development
 --------------------------------
+New: переместил подключение gii и дебаг панели в локальные файлы
+	что бы активировать их нужно переименовать local.php.sample в local.php в папках конфигов в приложениях
 New: изменено имя команды отправки почты, теперь для вызова достаточно: ./yiic email
 New: изменены названия namespace для модулей и приложений на соответствующие названиям каталогов
 New: добавлена команда установки прав 777 на каталоги runtime и assets
